name:                hangman
version:             0.1.0.0
synopsis:            playing hangman
homepage:            Chris N Julie
license:             BSD3
license-file:        LICENSE
author:              Chris Allen and Julie Moronuki
maintainer:          haskellbook.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , data/dict.txt

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  exposed-modules:     Hangman
  build-depends:       base

executable hangman
  main-is:              Main.hs
  ghc-options:          -Wall -fwarn-tabs
  hs-source-dirs:       src
  build-depends:        base >= 4.7 && < 5
                      , random
                      , split
  other-modules:        Hangman
  default-language:     Haskell2010

test-suite tests
  ghc-options:          -Wall -fno-warn-orphans
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  build-depends:        base
                      , QuickCheck
                      , hspec
                      , hangman
  default-language:     Haskell2010

