name:                chapterExercises
version:             1.0.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

test-suite chapterExercises-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
